--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,16 @@
-@import './base.css';
+/* @import './base.css'; */
+body {
+  @apply m-0;
+}
 
 #app {
+  @apply flex flex-col;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
+/* #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -32,4 +42,4 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+} */
